# automl

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
src/: extract_openml.py  main.py  meta_features_learning.py
src/automl/: __init__.py  config.py  functions.py
src/automl/enums/: enums.py
src/automl/feature_engineer/: CustomStandardScaler.py  RemoveHighlyCorrelated.py
src/automl/optimizers/: __init__.py  base_optimizer.py  bayesian_optimizer.py  bayesian_optimizer_hyperband.py  llm_cache.db  llm_optimizer.py  random_search_optimizer.py
src/automl/optimizers/acquisition_functions/: __init__.py  expected_improvement.py
src/automl/optimizers/surrogate_models/: __init__.py  gaussian_process_surrogate.py  meta_surrogate.py
src/automl/preprocess/: CustomLabelEncoder.py  RemoveOutliers.py  TimeSeriesPreprocessor.py  __init__.py
tests/: test_acquisition_functions.py  test_base_optimizer.py  test_config.py  test_enums.py  test_feature_engineer.py  test_functions.py  test_preprocess.py  test_surrogate_models.py
