[project]
name = "automl"
version = "0.1.4"
description = "An automated machine learning package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Khaled Ibrahim", email = "khaled.elbalal@gmail.com" },
  { name = "Malak Abouelkhair", email = "malak.abouelkhair@gmail.com" },
  { name = "Malak Mahmoud", email = "malak.mahmoud.hassann@gmail.com" },
  { name = "Omar Galal", email = "omar.galal.hassan@gmail.com" },
  { name = "Mohamed Yasser", email = "mohamed.y.abdelmaged@gmail.com" },
  { name = "Ahmed Khaled", email = "khaled.elbalal@gmail.com" }
]


dependencies = [
    "joblib==1.4.2",
    "lightgbm==4.5.0",
    "numpy>=1.23.5,<2.3",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "pyarrow==19.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "six==1.17.0",
    "threadpoolctl==3.5.0",
    "tzdata==2025.1",
    "dotenv==0.9.9",
    "google-generativeai==0.8.5",
    "optuna==4.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
    "pytest-cov==4.1.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
